# Antigravity-Chain

./: .gitignore  ANTIGRAVITY_WHITEPAPER.md  ARCHITECTURE.md  CENTICHAIN_WHITEPAPER.md  README.md  README_FA.md  WHITEPAPER.md  WHITEPAPER_FA.md  package-lock.json  package.json  tailwind.config.js
docs/: CONNECT.md  CONNECT_FA.md  MASTER_VISION_AND_TECHNOLOGY_FA.md  TECHNICAL_DOCUMENTATION_FA.md
scripts/: dev.ps1
src/: App.css  App.tsx
src-tauri/: Cargo.toml  antigravity.db  check_output.txt  error_clean.txt  tauri.conf.json
src-tauri/src/: chain.rs  consensus.rs  lib.rs  main.rs  mempool.rs  p2p.rs  state.rs  storage.rs  vdf.rs  wallet.rs
src-tauri/src/api/: node.rs
src-tauri/src/chain/: block.rs  merkle.rs  messages.rs  mod.rs  receipt.rs  transaction.rs  validation.rs
src-tauri/src/commands/: chain.rs  general.rs  mod.rs  network.rs  node.rs  wallet.rs
src-tauri/src/consensus/: epoch.rs  leadership.rs  mempool.rs  mod.rs  node_state.rs  sharding.rs
src-tauri/src/network/: behaviour.rs  commands.rs  mod.rs  p2p.rs  startup.rs
src-tauri/src/node/: helpers.rs  manager.rs  mining.rs  mod.rs  network_init.rs  relay.rs  vdf.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/utils/: constants.rs  mod.rs
src/components/: BlockDetailsModal.tsx  BlockExplorer.tsx  ConfirmationModal.tsx  Dashboard.tsx  Layout.tsx  NetworkMap.tsx  PageTransition.tsx  SwitchWalletModal.tsx  TxDetailsModal.tsx  WelcomeAnimation.tsx  WipeDataModal.tsx
src/context/: AppContext.tsx  ThemeContext.tsx  ToastContext.tsx
src/lib/: utils.ts
src/pages/: Explorer.tsx  Mempool.tsx  (+6 more)
(+13 files in other folders)
