[package]
name = "centichain"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "centichain"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "centichain_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libp2p = { version = "0.52", features = ["tcp", "tokio", "gossipsub", "mdns", "noise", "yamux", "macros", "dns", "kad", "request-response", "identify", "ping", "relay", "dcutr", "cbor"] }
tokio = { version = "1", features = ["full"] }
bincode = "1.3"
sha2 = "0.10"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
anyhow = "1.0"
hex = "0.4"
futures = "0.3"
redb = "1.0"
uuid = { version = "1.0", features = ["v4"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
bip39 = "2.0.0"
rand = "0.8"
flexi_logger = { version = "0.29", features = ["async"] }
axum = { version = "0.7", features = ["macros", "ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
dirs = "6.0.0"

